--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,38 @@
+# Dependencies
 node_modules
+
+# Build output
 dist
+client/dev-dist
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# OS files
 .DS_Store
+Thumbs.db
+
+# IDE
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.swp
+*.swo
+*~
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Temporary files
 server/public
 vite.config.ts.*
 *.tar.gz
+
+# Testing
+coverage
